==> tjclement/ecsc23-badge/fw/ECSC23/Src/eeprom.c <==
#include "stm32f1xx_hal.h"
#include "eeprom.h"
#include "print.h"
#include "i2c.h"

#define I2C_TIMEOUT (9000) // in ms

void i2c_scan(void) {
  uart_printf("I2C scan:\r\n     00   01   02   03   04   05   06   07   08   09   0A   0B   0C   0D   0E   0F");
  for(int i=0; i<8; i++)
  {
    uart_printf("\r\n %d0  ", i);
    for(int j = 0; j < 16; j++) {
      int addr = (i * 16) + j;
      HAL_StatusTypeDef ret = HAL_I2C_IsDeviceReady(&hi2c1, (uint16_t) (addr << 1), 3, 5);
      if (ret != HAL_OK) /* No ACK Received At That Address */
      {
        uart_printf(".... ");
      } else {
        uart_printf("0x%02X ", addr);
      }
    }
  }
}

void eeprom_dump(uint8_t i2c_addr) {
  uart_printf("\r\n0x%02X contents:\r\n     00   01   02   03   04   05   06   07   08   09   0A   0B   0C   0D   0E   0F", i2c_addr);
  for(int i=0; i<8; i++)
  {
    uart_printf("\r\n %d0  ", i);
    for(int j = 0; j < 16; j++) {
      int addr = (i * 16) + j;
      uint8_t buf;
      HAL_StatusTypeDef ret = HAL_I2C_Mem_Read(&hi2c1, (uint16_t) (i2c_addr << 1), addr, I2C_MEMADD_SIZE_8BIT, &buf, 1, I2C_TIMEOUT);
      if (ret == HAL_OK) {
        uart_printf("0x%02X ", buf);
      } else {
        uart_printf("ERR  ");
      }
    }
  }
}

HAL_StatusTypeDef eeprom_read(uint8_t *dest, uint8_t i2c_addr, uint16_t reg_addr, uint16_t nbytes) {
  return HAL_I2C_Mem_Read(&hi2c1, (uint16_t) (i2c_addr << 1), reg_addr, I2C_MEMADD_SIZE_8BIT, dest, nbytes, I2C_TIMEOUT);
}

HAL_StatusTypeDef eeprom_write(uint8_t *src, uint8_t i2c_addr, uint16_t reg_addr, uint16_t nbytes) {
  return HAL_I2C_Mem_Write(&hi2c1, (uint16_t) (i2c_addr << 1), reg_addr, I2C_MEMADD_SIZE_8BIT, src, nbytes, I2C_TIMEOUT);
}

HAL_StatusTypeDef eeprom_restore() {
  // In python: b'~\x9f\xfa\xeb\x03\xcb\xf6\xf3\x9e\xee\x9a\x8ag~\x13\xb7]\x8a@y\x19A2\x95\xe25#\xcd\xaf%FW\xca|\xdb>(\xb8\xf1}\x81\xc1\xaa\xc2\xb2a\xaa\xb6\x0b\xf6\xb3 8q\xb7i%\xd7/9\xbe\x97\xc1\x87_\x176A:!\xa1rNT\xdaK\xb7\x00\xa0\x8b\xa0\xd6\xee_\xda\x90\xf9,\xc2\xf8l\xb8*\xe8\xa6\xda\x16\xd6re\x08\xbdE\xa9W<]dA\xc2\x16\xbf-2,\xe7]\x97\xa2\xd6\xa4Q\xf9\xa05G\xe4\x12%\x0c\xec\xe7s\x10\x97\x81\xea\xd0\r+\xad\x00\x00\x00\x00\x9f\xf2\xd8>V\x1aN\x9eB\x8f\xcb0\xa8p\xdf\x98\xc2\xe68t}\xffH9\xb2\x8cl]^\xef\xe7\x81\xf9\xf4\xb7\xb6i\x05g\x12\xc2\x05\x84\x9d\xdf#\xb2\xae\xe8\xdeV\xaf\xf0\xefs\x13\xef\xa3\x06\xd8\xb8\x0b\xdc\x00\x93\xcf\xcd \xd8D\x816Hn\x07+\xc8v\x81\xfd\x92\xf8+\xa2<.\x9e\xe4\xfc.4\x10\xe5b\xaf+R\xa1\xa13+G\xdd\x92k0[-\xcb:f'
  uint8_t eeprom1_restore_data[EEPROM_LEN] = {
    0x7E, 0x9F, 0xFA, 0xEB, 0x03, 0xCB, 0xF6, 0xF3, 0x9E, 0xEE, 0x9A, 0x8A, 0x67, 0x7E, 0x13, 0xB7,
    0x5D, 0x8A, 0x40, 0x79, 0x19, 0x41, 0x32, 0x95, 0xE2, 0x35, 0x23, 0xCD, 0xAF, 0x25, 0x46, 0x57,
    0xCA, 0x7C, 0xDB, 0x3E, 0x28, 0xB8, 0xF1, 0x7D, 0x81, 0xC1, 0xAA, 0xC2, 0xB2, 0x61, 0xAA, 0xB6,
    0x0B, 0xF6, 0xB3, 0x20, 0x38, 0x71, 0xB7, 0x69, 0x25, 0xD7, 0x2F, 0x39, 0xBE, 0x97, 0xC1, 0x87, // chall4 key
    0x5F, 0x17, 0x36, 0x41, 0x3A, 0x21, 0xA1, 0x72, 0x4E, 0x54, 0xDA, 0x4B, 0xB7, 0x00, 0xA0, 0x8B,
    0xA0, 0xD6, 0xEE, 0x5F, 0xDA, 0x90, 0xF9, 0x2C, 0xC2, 0xF8, 0x6C, 0xB8, 0x2A, 0xE8, 0xA6, 0xDA,
    0x16, 0xD6, 0x72, 0x65, 0x08, 0xBD, 0x45, 0xA9, 0x57, 0x3C, 0x5D, 0x64, 0x41, 0xC2, 0x16, 0xBF,
    0x2D, 0x32, 0x2C, 0xE7, 0x5D, 0x97, 0xA2, 0xD6, 0xA4, 0x51, 0xF9, 0xA0, 0x35, 0x47, 0xE4, 0x12,
    0x25, 0x0C, 0xEC, 0xE7, 0x73, 0x10, 0x97, 0x81, 0xEA, 0xD0, 0x0D, 0x2B, 0xAD, 0x00, 0x00, 0x00, // chall3 here (DO OD 2B AD)
    0x00, 0x9F, 0xF2, 0xD8, 0x3E, 0x56, 0x1A, 0x4E, 0x9E, 0x42, 0x8F, 0xCB, 0x30, 0xA8, 0x70, 0xDF,
    0x98, 0xC2, 0xE6, 0x38, 0x74, 0x7D, 0xFF, 0x48, 0x39, 0xB2, 0x8C, 0x6C, 0x5D, 0x5E, 0xEF, 0xE7,
    0x81, 0xF9, 0xF4, 0xB7, 0xB6, 0x69, 0x05, 0x67, 0x12, 0xC2, 0x05, 0x84, 0x9D, 0xDF, 0x23, 0xB2,
    0xAE, 0xE8, 0xDE, 0x56, 0xAF, 0xF0, 0xEF, 0x73, 0x13, 0xEF, 0xA3, 0x06, 0xD8, 0xB8, 0x0B, 0xDC, // chall2 key
    0x00, 0x93, 0xCF, 0xCD, 0x20, 0xD8, 0x44, 0x81, 0x36, 0x48, 0x6E, 0x07, 0x2B, 0xC8, 0x76, 0x81,
    0xFD, 0x92, 0xF8, 0x2B, 0xA2, 0x3C, 0x2E, 0x9E, 0xE4, 0xFC, 0x2E, 0x34, 0x10, 0xE5, 0x62, 0xAF,
    0x2B, 0x52, 0xA1, 0xA1, 0x33, 0x2B, 0x47, 0xDD, 0x92, 0x6B, 0x30, 0x5B, 0x2D, 0xCB, 0x3A, 0x66
  };

  // In python: b'\x9e\x9d\x8a\x7f\xa0!9\xf5G\xfa\x8be\xcf\xbb.@\xf1\xc2t?\xe7G;\x1f\xbd?\x8b$x\xf6 h)%~\x00\xe1\x1eT\xc8a\xc2T-\xd7\xdfi\xf4\xe8m\xa2\x91h\xc3\x11\t[\x13\xf2x\x00\x8f\xf8\x0b?\xb7\xa5\xabIEa0\xa0&\x0c\x1a.\x90\x13\x92\x12\x1fK\xac+\xc8\x06\xb5\xf7s\xa5\xb9\x87Ve\x94\n\xc6\xd8\'S\xad\xd4F\x0f\xe2\x1eX#\xd7\'\x17)\xe2\xdb\x8e\x8eY\x11\x1f\xe5\xc8\x03M\x13\xdb\xa1\xbc\x0ep\xa1\xdb\xd89\xdc3&\xc4\xad\xcb1\x8b4\x94\xb7bb\x10\x92\xa3\xe4\xf1\xf1\x1fP\xdb\xed\x80\xf7\xd4\xcbg\x03\x8d?w@\x0e\xd5*f\xc0\x13\xd4\xff\xf1e\x87\xbc9\xc5\x9c\xe37\xca\xff-\xc5\x80\xecq\x15\xd1K\xee"\x8c\x1f\xfe\xa9\x82\x86*Z\x84\xaf\xaa7\xc2\x8c\x91\xc4w\x89q"TdS\x00\xceOd\x7f{\xde}\xae\xf0\'\xe3\x04\xf8\x06\xb5D"\x7f\xb5@\xbd\x84\x86\xb4\xc475L\x0bH}|3w\x92\x10'
  uint8_t eeprom2_restore_data[EEPROM_LEN] = {
    0x9E, 0x9D, 0x8A, 0x7F, 0xA0, 0x21, 0x39, 0xF5, 0x47, 0xFA, 0x8B, 0x65, 0xCF, 0xBB, 0x2E, 0x40,
    0xF1, 0xC2, 0x74, 0x3F, 0xE7, 0x47, 0x3B, 0x1F, 0xBD, 0x3F, 0x8B, 0x24, 0x78, 0xF6, 0x20, 0x68,
    0x29, 0x25, 0x7E, 0x00, 0xE1, 0x1E, 0x54, 0xC8, 0x61, 0xC2, 0x54, 0x2D, 0xD7, 0xDF, 0x69, 0xF4,
    0xE8, 0x6D, 0xA2, 0x91, 0x68, 0xC3, 0x11, 0x09, 0x5B, 0x13, 0xF2, 0x78, 0x00, 0x8F, 0xF8, 0x0B,
    0x3F, 0xB7, 0xA5, 0xAB, 0x49, 0x45, 0x61, 0x30, 0xA0, 0x26, 0x0C, 0x1A, 0x2E, 0x90, 0x13, 0x92, // chall3 key
    0x12, 0x1F, 0x4B, 0xAC, 0x2B, 0xC8, 0x06, 0xB5, 0xF7, 0x73, 0xA5, 0xB9, 0x87, 0x56, 0x65, 0x94,
    0x0A, 0xC6, 0xD8, 0x27, 0x53, 0xAD, 0xD4, 0x46, 0x0F, 0xE2, 0x1E, 0x58, 0x23, 0xD7, 0x27, 0x17,
    0x29, 0xE2, 0xDB, 0x8E, 0x8E, 0x59, 0x11, 0x1F, 0xE5, 0xC8, 0x03, 0x4D, 0x13, 0xDB, 0xA1, 0xBC,
    0x0E, 0x70, 0xA1, 0xDB, 0xD8, 0x39, 0xDC, 0x33, 0x26, 0xC4, 0xAD, 0xCB, 0x31, 0x8B, 0x34, 0x94,
    0xB7, 0x62, 0x62, 0x10, 0x92, 0xA3, 0xE4, 0xF1, 0xF1, 0x1F, 0x50, 0xDB, 0xED, 0x80, 0xF7, 0xD4,
    0xCB, 0x67, 0x03, 0x8D, 0x3F, 0x77, 0x40, 0x0E, 0xD5, 0x2A, 0x66, 0xC0, 0x13, 0xD4, 0xFF, 0xF1,
    0x65, 0x87, 0xBC, 0x39, 0xC5, 0x9C, 0xE3, 0x37, 0xCA, 0xFF, 0x2D, 0xC5, 0x80, 0xEC, 0x71, 0x15,
    0xD1, 0x4B, 0xEE, 0x22, 0x8C, 0x1F, 0xFE, 0xA9, 0x82, 0x86, 0x2A, 0x5A, 0x84, 0xAF, 0xAA, 0x37,
    0xC2, 0x8C, 0x91, 0xC4, 0x77, 0x89, 0x71, 0x22, 0x54, 0x64, 0x53, 0x00, 0xCE, 0x4F, 0x64, 0x7F, // chall1 key
    0x7B, 0xDE, 0x7D, 0xAE, 0xF0, 0x27, 0xE3, 0x04, 0xF8, 0x06, 0xB5, 0x44, 0x22, 0x7F, 0xB5, 0x40,
    0xBD, 0x84, 0x86, 0xB4, 0xC4, 0x37, 0x35, 0x4C, 0x0B, 0x48, 0x7D, 0x7C, 0x33, 0x77, 0x92, 0x10
  };
  HAL_StatusTypeDef ret1 = eeprom_write(eeprom1_restore_data, EEPROM1_ADDR, 0, sizeof(eeprom1_restore_data));
  HAL_StatusTypeDef ret2 = eeprom_write(eeprom2_restore_data, EEPROM2_ADDR, 0, sizeof(eeprom2_restore_data));

  return ret1 | ret2;
}
